# utf8

./: .gitignore  CMakeLists.txt  LICENSE  LISENCE  Makefile  README.md
benchmarks/: bench_core.cpp
include/utf8/: base.hpp  export.hpp  utf8.hpp
scripts/: gen_property.py  manifest.json
source/: decode.cpp  encode.cpp  internal.hpp  utils.cpp
tests/: fuzz_test.cpp  test_core.cpp
